postgres-keycloack-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-keycloack
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-keycloack
  template:
    metadata:
      labels:
        app: postgres-keycloack
    spec:
      containers:
      - name: postgres-keycloack
        image: postgres:16.3
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-keycloack-persistent-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-keycloack-persistent-storage
        persistentVolumeClaim:
          claimName: postgres-keycloack-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-keycloack-service
  namespace: dev
spec:
  selector:
    app: postgres-keycloack
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
